--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Google Timeline Analyzer specific
+Timeline.json
+exports/*.csv
+exports/*.json
+exports/*.geojson
+.claude/
