--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,6 @@ services:
       POSTGRES_PASSWORD: timeline_pass
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./src/storage/schema.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
     healthcheck:
@@ -44,6 +43,7 @@ services:
       - ./Timeline.json:/app/Timeline.json:ro
       - ./exports:/app/exports
       - ./src:/app/src
+      - ./alembic:/app/alembic
     depends_on:
       postgres:
         condition: service_healthy
